# 2d-stealth-game

./: .clang-format  .gitignore  CMakeLists.txt  README.md  rpg_specification.md
.github/workflows/: cmake-single-platform.yml
assets/: default_game.json  jungle_full.tsj  map_jungle_01.json  map_jungle_01.tmj  overworld_char_mapping.csv  overworld_map_background.txt  overworld_map_objects.txt  tile_properties.csv  weapon_data.csv
assets/ai/trees/: DetectTree.xml  EngageTree.xml  IdleTree.xml  MainTree.xml  tree.xml
assets/maps/01/: map01.json
include/boost-ext/: sml.hpp
src/: CMakeLists.txt  Game.hpp  constants.hpp  main.cpp  savefile.json
src/ai/: AIRole.hpp  AIState.hpp  AIStateMachine.hpp  Blackboard.hpp  IsEnemyVisibleNode.hpp  MoveToNode.hpp  TurnToNode.hpp  WaitForNode.hpp
src/ai/nodes/: IsEnemyVisible.hpp  IsInState.hpp  MoveTo.hpp  Patrol.hpp  PatrolTo.hpp  RandomSelector.hpp  ShootAt.hpp  TurnTo.hpp  WaitFor.hpp
src/behaviortree/: BehaviorStatus.hpp  BehaviorTree.hpp  Blackboard.hpp  ControlNodes.hpp  DecoratorNodes.hpp  LeafNode.hpp  TreeNode.hpp
src/components/: AI.hpp  Animatable.hpp  Audio.hpp  Collectable.hpp  Collider.hpp  Consumable.hpp  Controllable.hpp  DamageBuffer.hpp  EquippedWeapon.hpp  Health.hpp  Hearing.hpp  Interactable.hpp  Inventory.hpp  Loadout.hpp  Pathfinding.hpp  Patrol.hpp  Positionable.hpp  Projectile.hpp  Renderable.hpp  RigidBody.hpp  Rotatable.hpp  SoundEmitter.hpp  Stats.hpp  Target.hpp  Tombstone.hpp  Vision.hpp  Weapon.hpp
src/ecs/: VectorRegistry.hpp
src/engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  FPSCounter.hpp  FrameRateLimiter.hpp  FrameTimer.hpp  Keyboard.hpp  Mouse.hpp  Recti.hpp  SDL_Deleter.hpp  Texture.hpp  TextureFlip.hpp  Vec2d.hpp  Vec2f.hpp  Vf2d.hpp  types.hpp
src/engine/audio/: Audio.cpp  Audio.hpp  ChannelManager.hpp
src/engine/frame/: FrameTimer.hpp
src/engine/input/: Input.cpp  Input.hpp  KeyState.hpp  Keyboard.hpp  Mouse.hpp
src/engine/sound/: Audio.cpp  Audio.hpp  AudioConstants.hpp  ChannelManager.hpp  Listener.hpp
src/engine/types/: ColorRGBA.hpp  Music.hpp  Rectf.hpp  Recti.hpp  SoundEffect.hpp  Vec2f.hpp  Vec2i.hpp
src/entities/: character.hpp  entity.hpp  item.hpp  npc.hpp  player.hpp  projectile.hpp  sign.hpp
src/items/: WeaponDatabase.hpp  WeaponMetadata.hpp
src/map/: LevelMap.hpp  LevelMap_NEW.hpp  MapLoader.hpp  MapManager.hpp  MapManagerTMX.hpp  TileRegistry.hpp
src/modules/: AABB.hpp  AStar.hpp  BTManager.hpp  CSVDatabase.hpp  CSVParser.hpp  Camera.hpp  DDA.hpp  GameStateManager.hpp  LevelMap.hpp  MapManager.hpp  MenuStack.hpp  SaveGameManager.hpp  SelectionManager.hpp  StateMachine.hpp  StateMachineTest.hpp  TileRegistry.hpp  Utils.hpp
src/systems/: AIPerceptionSystem.hpp  AISystem.hpp  AnimationSystem.hpp  AudioSystem.hpp  CleanupSystem.hpp  DamageSystem.hpp  DebugSystem.hpp  FiringSystem.hpp  InputSystem.hpp  InteractionSystem.hpp  PathfindingSystem.hpp  PhysicsSystem.hpp  ProgressSystem.hpp  ProjectileSystem.hpp  RenderSystem.hpp  System.hpp  UIRenderSystem.hpp
src/ui/: ConfirmationMenu.hpp  InGameMenu.hpp  InventoryMenu.hpp  ListDialog.hpp  ListItem.hpp  MainMenu.hpp  SelectionUIElement.hpp  StatsMenu.hpp  TextDialog.hpp  UIElement.hpp
src/weapons/: WeaponDatabase.hpp  WeaponMetadata.hpp
tests/: CMakeLists.txt  main.test.cpp  util.test.cpp
tests/behaviortree/: BehaviorTree.test.hpp
tests/ecs/: ECSManager.benchmark.cpp  ECSManager.test.cpp  Registry.test.cpp
tests/engine/: Vec2d.test.cpp  Vec2i.test.cpp
tests/modules/: AStar.test.cpp  SaveGameManager.test.cpp
